Resolved Review link and Nav-bar spacing

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -37,11 +37,25 @@ a:focus, a:hover {
   display: block;
   color: darkslategrey;
 }
+
+#search-games-by-tag {
+  border: 1px solid aqua;
+}
+/*id="game-search-tag-name-input"*/
+#search-reviews-by-tag {
+  border: 1px solid aqua;
+}
+/*id="review-search-tag-name-input"*/
+
 #nav-subbar {
   -webkit-box-shadow: inset 0.7rem 0rem 0rem 0rem rgba(30, 44, 71, 1);
   -mox-box-shadow: inset 0.7rem 0rem 0rem 0rem rgba(30, 44, 71, 1);
   box-shadow: inset 0.7rem 0rem 0rem 0rem  rgba(30, 44, 71, 1);
   font-family: Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#nav-subbar>li>ol {
+  padding: 1rem;
 }
 
 article {
@@ -52,15 +66,6 @@ article a {
   outline: none;
 }
 
-
-#search-games-by-tag {
-  border: 1px solid aqua;
-}
-/*id="game-search-tag-name-input"*/
-#search-reviews-by-tag {
-  border: 1px solid aqua;
-}
-/*id="review-search-tag-name-input"*/
 
 #game-table {
   -webkit-box-shadow: inset 0.7rem 1rem 0rem 0rem rgba(30, 44, 71, 1);
